User Entities and Configuration database completed

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=backend
+
+spring.datasource.url=jdbc:mysql://localhost:3306/odoodb
+spring.datasource.username=root
+spring.datasource.password=Realme6G90T
+
+spring.jpa.hibernate.ddl-auto=update
