--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,4 @@
 spring.application.name=backend
 
-spring.datasource.url=jdbc:mysql://localhost:3306/odoodb
-spring.datasource.username=root
-spring.datasource.password=Realme6G90T
-
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=dev
 
